--- a/catkin_ws/src/turtlesim_brad/CMakeLists.txt
+++ b/catkin_ws/src/turtlesim_brad/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(turtlesim)
+project(turtlesim_brad)
 
 find_package(catkin REQUIRED COMPONENTS geometry_msgs message_generation rosconsole roscpp roscpp_serialization roslib rostime std_msgs std_srvs)
 
