--- a/catkin_ws/src/turtlesim_brad/package.xml
+++ b/catkin_ws/src/turtlesim_brad/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>turtlesim</name>
+  <name>turtlesim_brad</name>
   <version>0.7.1</version>
   <description>
     turtlesim is a tool made for teaching ROS and ROS packages.
